force-app/main/default/objects/OpportunityLineItem/fields/adoption__c.field-meta.xml
<CustomField>
    <fullName>adoption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>採用</label>
    <type>Checkbox</type>
</CustomField>