force-app/main/default/objects/OpportunityLineItem/fields/DeiscoutCampaign__c.field-meta.xml
<CustomField>
    <fullName>DeiscoutCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>割引キャンペーン</label>
    <referenceTo>DiscoutCampaign__c</referenceTo>
    <relationshipLabel>商談商品</relationshipLabel>
    <relationshipName>DeiscoutCampaignif5u</relationshipName>
    <type>Lookup</type>
</CustomField>