force-app/main/default/objects/OpportunityLineItem/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>割引額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>