force-app/main/default/objects/OpportunityLineItem/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <label>割引率</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>