force-app/main/default/objects/OpportunityLineItem/fields/mitsumoribi__c.field-meta.xml
<CustomField>
    <fullName>mitsumoribi__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>見積日</label>
    <type>Date</type>
</CustomField>