force-app/main/default/objects/OpportunityLineItem/fields/ProductItem_Other__c.field-meta.xml
<CustomField>
    <fullName>ProductItem_Other__c</fullName>
    <label>その他商品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>