force-app/main/default/objects/OpportunityLineItem/fields/ShippingScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ShippingScheduleDate__c</fullName>
    <label>出荷予定日</label>
    <type>Date</type>
</CustomField>